styles.css
/* Load fonts: NPS font */
@font-face{
	font-family: 'NPS';
	src: url('fonts/NPSfont_regular.ttf') format('truetype');
	font-weight:400;
}
@font-face{
	font-family: 'NPS';
	src: url('fonts/NPSfont_bold.ttf') format('truetype');
	font-weight:700;
}
@font-face{
	font-family: 'NPS';
	src: url('fonts/NPSfont_extrabold.ttf') format('truetype');
	font-weight:900;
}

/* The Basics */
*{
	margin:0;
	padding:0;
    box-sizing: border-box;
}
html{
	width:100%;
	height:100%;
    
}
body{
	width:100%;
	height:100%;
	font-family:NPS;
    font-size:16px;
}

.fullsize{
	position:absolute;
	top:0;bottom:0;left:0;right:0;
}
canvas{
	display:block;
	pointer-events:none;
}
#whole-screen-div{
  overflow:hidden;
}
#intro-content-container{
	max-width:1000px;
	width:calc(100% - 128px);
	margin-left:auto;
	margin-right:auto;
	position:relative;
	display:flex;
	flex-direction:column;
	transition-property: backdrop-filter, background-color, box-shadow;
	transition-duration:0.5s;
}

/* Is box-shadow performance-intensive? idk */
#intro-content-container.activated{
  background-color:#FFFFFF30;
  box-shadow:0 0 10px #FFFFFF40;
}
#intro-content-container.css-filters{
  
}
/* If CSS filter enabled - use blur() */
#intro-content-container.activated.css-filters{
  backdrop-filter: blur(3px);
}
/* If CSS filter disabled - just darken the background more. */
#intro-content-container.activated:not(.css-filters){
  background-color:#FFFFFF40;
}
#content-scroller{
	position:absolute;
	bottom:0;
    right:0;
    left:0;
    top:0;
    z-index:10;
	overflow-y:scroll;
	overflow-x:hidden;
}
#screen-blanker{
  height:100lvh;
}
#afterscroll-content-container{
  min-height:100svh;
  align-self:stretch;
  display:flex;
  flex-direction:column;
  filter:brightness(30%);
  transition-property: filter;
  transition-duration:0.5s;
  padding-left:64px;
  padding-right:64px;
  position:relative;
}
#afterscroll-content-container.activated{
  filter:none;
}

#sticky-container{
  position:sticky;
  top:0;
}
#intro-content-scrollable{
  position:absolute;
  bottom:0;
  right:0;
  left:0;
  top:0;
  z-index:5;
}
#mpn-logo-spacer{
  position:absolute;
  top:6lvmin;
  left:0;
  right:0;
}
#mpn_logo_container{
  margin-left:auto;
  margin-right:auto;
  width:min(100lvh,80vw);
  height:min(50lvh,40vw);
  position:relative;
}
#mpn_logo_container > img{
  position:absolute;
  left:0;
  top:0;
  right:0;
  bottom:0;
  width:100%;
  height:100%;
  object-fit:contain;
}
#l2d-container{
  width:min(40vw,50lvh);
  height:min(40vw,50lvh);
  position:absolute;
  right:0;
  bottom:0;
  z-index:22;
  pointer-events:none;
}
#hmr-image-container{
  width:min(40vw,50lvh);
  height:min(40vw,50lvh);
  position:absolute;
  right:0;
  bottom:0;
  z-index:20;
  pointer-events:none;
}
#hmr-image-container > img{
  position:absolute;
  max-width:100%;
  max-height:100%;
  bottom:0;
  right:0;
}
#scroll-inviter-container{
  position:absolute;
  bottom:15lvh;
  left:25vw;
}
@keyframes scroll-inviter-anim{
  from{
    margin-bottom:0px;
    opacity:0.5;
  }
  to{
    margin-bottom:24px;
    opacity:0.4;
  }
  
}
#scroll-inviter{
  animation-name:scroll-inviter-anim;
  animation-direction:alternate;
  animation-duration:1.5s;
  animation-iteration-count:infinite;
  animation-timing-function: ease-in-out;
}
#sky-bg{
background: linear-gradient(0deg,#101050,#303070)
}
#container-ground{
  pointer-events:none;
  position:absolute;
  left:0;
  right:0;
  height:50lvh;
  bottom:-50lvh;
}
#container-stars{
  position:absolute;
  left:0;
  right:0;
  height:calc(100lvh + 200px);
  top:0;
}
#sidebar-positioner{
  display:flex;
  flex-direction:row;
  justify-content:flex-start;
  align-items:center;
  width:100%;
  height:100%;
  margin-left:max(8px,calc((100vw - 1000px) / 2 - 60px));
  position:relative;
}
#sidebar-animation-container{
  position:absolute;
  left:0;
  top:0;
  bottom:0;
  right:0;
  z-index:2;
  display:flex;
  flex-direction:row;
  align-items:center;
  justify-content:flex-start;
}
#sidebar-intro-anim{
  width:320px; 
  height:320px; 
  margin-left:-80px; 
}
#sidebar{
  border:3px solid #d3bf84; 
  width:200px;
  max-height:calc(100dvh - 64px);
  flex-direction:column;
  justify-content:center;
  align-items:flex-start;
  text-align:left;
  gap:8px;
  
  padding-left:24px;
  padding-right:24px;
  padding-top:40px;
  padding-bottom:40px;
  border-image-source: url("sprites-prototype/MPN2-Prototype-Image-Scroll.png");
  border-image-width:60px;
  border-image-outset:0px;
  border-image-slice: 550 445 445 420 fill;
  
  overflow:hidden;
  
  display:flex;
}
#sidebar.css-filters{
  filter:drop-shadow(8px 8px 10px #00000080);
}
.sb-category-container{
  display:flex;
  flex-direction:column;
  align-items:flex-start;
}
.sb-category-header{
  text-wrap:nowrap;
  color:#644a20;
  font-size:1.1em;
  font-weight:700;
  display:flex;
  flex-direction:row;
  flex-wrap:nowrap;
  align-items:center;
  cursor:pointer;
}
.sbch-icon{
  font-size:0.5em;
  width:1.5em;
}
.sb-category-content{
  margin-left:1.4em;
  margin-top:0.2em;
  display:flex;
  flex-direction:column;
  align-items:flex-start;
  
  /*
  transition-duration:1s;
  overflow-y:hidden;
  transition-property:max-height;
  max-height:0px;*/
}
.sb-category-content.sbcc-expanded{
  /*max-height:1000px;*/
}
.sb-link{
  text-wrap:nowrap;
  text-align:left;
  font-weight:700;
  color:#644a20;
  cursor:pointer;
  font-size:1.0em;
}
.sb-link-toplevel{
  font-size:1.1em;
}
.sb-link-sublevel{
  font-size:1.0em;
  transition-duration:0.5s;
  transition-timing-function: cubic-bezier(0, 0.6, 0.4, 1);
  overflow-y:hidden;
  transition-property:height;
  height:0px;
}
.sb-category-content.sbcc-expanded .sb-link-sublevel{
  height:1.4em;
}
.sb-link-active{
}
.sb-link-disabled{
  opacity:0.3;
  cursor:unset;
}
#ticket{
  /*border:5px solid #b37c0f; 
  background-color:#fcdd41;*/
  background-image : url("sprites-prototype/MPN2-Prototype-Image-Ticket.png");
  background-size: contain;
  background-repeat:no-repeat;
  background-position: center;
  width:240px;
  height:160px;
  font-size:1.5em;
  display:flex;
  justify-content: center;
  align-items: center;
  padding:32px;
  margin-top:64px;
  transition-property: transform margin-bottom;
  transition-duration:0.5s;
  transition-timing-function: ease-in-out;
  transform:rotate(10deg);
  
}
#ticket:hover{
  transform:rotate(0deg);
}
#ticket.css-filters{
  filter:drop-shadow(8px 8px 10px #00000080);
}
#ticket.css-filters:hover{
  filter:drop-shadow(0 0 8px #ffff85);
}
#letter-magic-spritesheet-animation{
  width:100%;
  height:100%;
  background-image:url("sprites-prototype/MPN2-Prototype-Image-LetterMagicSpSht.png");
}

#langswitch-positioner{
  display:flex;
  flex-direction:row;
  justify-content:flex-end;
  align-items:flex-start;
}
#lang-btn{
  background-color:#FFF;
  color:#000;
  font-weight:700;
  font-size:1.0em;
  margin:16px;
  padding:8px;
  border-radius:8px;
  cursor:pointer;
  opacity:0;
  transition: all 1s;
}
#lang-btn.activated{
  opacity:1.0;
}

#sb-button-positioner{
  display:flex;
  flex-direction:row;
  justify-content:flex-start;
  align-items:flex-start;
}
#sb-btn{
  margin:16px;
  width:96px;
  height:96px;
  cursor:pointer;
  object-fit: contain;
}


#afterscroll-content-container > div{
    /*
	position:absolute;
	top:0;
	left:0;
	right:0;*/
	display:flex;
	flex-direction:column;
	align-items:center;
	justify-content:flex-start;
	margin-top:32px;
    margin-bottom:32px;
}
#bsky-outer{
  /*box-shadow: 0 0 8px #FFFFFFC0;*/
  background-color: #FFFFFF;
}

/* Responsive Section */
/* Targeting down to 300px. */

/* Mobile mode */
@media (width<640px) {
  #sb-btn{
    display:block;
  }
  #sidebar-positioner{
    display:flex;
    flex-direction:row;
    justify-content:flex-start;
    align-items:flex-start;
    width:100%;
    height:100%;
    margin-left:0;
  }
  #sidebar-animation-container{
    align-items:flex-start;
  }
  #sidebar-intro-anim{
    width:240px; 
    height:240px; 
    margin-left:-60px; 
    margin-top:-60px;
  }
  #sidebar{
    width:calc(100vw - 64px);
    height:calc(100dvh - 64px);
    margin-left:32px;
    margin-top:32px;
    font-size:1.5em;
    justify-content:space-evenly;
    overflow-y:scroll;
  }
  .sb-link{
    margin-top:0.2em;
    margin-bottom:0.2em;
  }
  .sb-category-header{
    margin-top:0.2em;
    margin-bottom:0.2em;
  }
  #intro-content-container{
    width:100%;
  }
  #afterscroll-content-container{
    padding-left:32px;
    padding-right:32px;
  }
  #l2d-container{
    width:min(70vw,40lvh);
    height:min(70vw,40lvh);
  }
  #hmr-image-container{
    width:min(70vw,40lvh);
    height:min(70vw,40lvh);
  }
}

/* Smaller Mobiles */
@media (width<480px) {
}

/* Ridiculously Small Mobiles */
@media (width<360px) {
}

/* Mobile ladder */
/* PC <-640-> Big Mobile <-480-> Small Mobile <-360-> Ridiculous <-300-> I give up */
@media (width>=480px) and (width<640px) {
  body{
    font-size:20px;
  }
}
@media (width>=360px) and (width<480px) {
  body{
    font-size:20px;
  }
}
@media (width<360px) {
  body{
    font-size:16px;
  }
}

